[gd_scene load_steps=7 format=2]

[ext_resource path="res://Fonts/D-DIN-Bold.otf" type="DynamicFontData" id=1]
[ext_resource path="res://Sprites/01_Sprite_Colleen.png" type="Texture" id=2]
[ext_resource path="res://SFX/voice murmur_01.ogg" type="AudioStream" id=3]
[ext_resource path="res://Scripts/Cameo.gd" type="Script" id=4]

[sub_resource type="CircleShape2D" id=1]
radius = 48.0

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 1 )

[node name="Colleen" type="Area2D"]
script = ExtResource( 4 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 3, 3 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 1.68179, -0.840897 )
shape = SubResource( 1 )

[node name="Label" type="Label" parent="."]
margin_left = -92.2045
margin_top = 41.8179
margin_right = 115.796
margin_bottom = 78.8179
custom_fonts/font = SubResource( 2 )
text = "Welcome to level 1! Have fun 
and good luck!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )

[connection signal="body_entered" from="." to="." method="_on_Colleen_body_entered"]
[connection signal="finished" from="AudioStreamPlayer2D" to="." method="_on_AudioStreamPlayer2D_finished"]
