[gd_scene load_steps=7 format=2]

[ext_resource path="res://Fonts/D-DIN-Bold.otf" type="DynamicFontData" id=1]
[ext_resource path="res://Sprites/01_Jen Sprite.png" type="Texture" id=2]
[ext_resource path="res://SFX/voice murmur_01.ogg" type="AudioStream" id=3]
[ext_resource path="res://Scripts/Cameo.gd" type="Script" id=4]

[sub_resource type="CircleShape2D" id=1]
radius = 108.116

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 1 )

[node name="Jenn" type="Area2D"]
script = ExtResource( 4 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 3, 3 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Label" type="Label" parent="."]
margin_left = -144.0
margin_top = -89.0
margin_right = 148.0
margin_bottom = -52.0
custom_fonts/font = SubResource( 2 )
text = "Weary traveler! 
Tread carefully!"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )

[connection signal="body_entered" from="." to="." method="_on_Jenn_body_entered"]
[connection signal="finished" from="AudioStreamPlayer2D" to="." method="_on_AudioStreamPlayer2D_finished"]
